--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,20 @@
 {
-  "rewrites": [
+  "installCommand": "npm install --prefix frontend",
+  "buildCommand": "npm run build --prefix frontend",
+  "builds": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/app.py"
+      "src": "frontend/next.config.js",
+      "use": "@vercel/next"
+    },
+    {
+      "src": "api/app.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/app.py"
     }
   ]
 }
