--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
+  "installCommand": "npm install --prefix frontend",
+  "buildCommand": "npm run build --prefix frontend",
   "builds": [
     {
       "src": "frontend/next.config.js",
