updating vercel to include frontend as landing page

--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,10 @@
     {
       "src": "/api/(.*)",
       "dest": "/api/app.py"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/frontend/$1"
     }
   ]
 }
