--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,10 @@
     },
     {
       "src": "api/app.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "launcher": "app.py"
+      }
     }
   ],
   "routes": [
