--- a/vercel.json
+++ b/vercel.json
@@ -7,14 +7,14 @@
       "use": "@vercel/next"
     },
     {
-      "src": "api/app.app",
+      "src": "api/app.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/app.app"
+      "dest": "/api/app.py"
     },
     {
       "src": "/(.*)",
